fix: latest resources only aligned center on product page

--- a/blocks/latest-resources/latest-resources.css
+++ b/blocks/latest-resources/latest-resources.css
@@ -1,6 +1,5 @@
-.latest-resources-container {
+.product .latest-resources-container {
   text-align: center;
-  padding-top: 90px;
 }
 
 main .carousel-wrapper.latest-resources-wrapper {
